--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,15 @@
 cmake_minimum_required(VERSION 3.18)
-project(CNN)
+project(CNN CXX)
 
-add_compile_options(-Wall -Wextra -pedantic -Werror -std=c++20)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+enable_testing()
+
+add_compile_options(-Wall -Wextra -pedantic -Werror)
 include_directories(./include ./res)
 find_package(GTest CONFIG REQUIRED) 
+
+
+add_subdirectory(tests)
+add_subdirectory(src)
